--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -19,8 +19,8 @@
 
 <navigator url="/pages/index/玳瑁及三花/玳瑁及三花" >
   <view class="catitem">
-    <image  class = 'avator ' src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/花灵灵_circle.png" mode='aspectFill' ></image>
-    <view class="cat-name">三花和玳瑁</view> 
+    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/公主_circle.png" mode='aspectFill' ></image>
+    <view class="cat-name">玳瑁及三花</view> 
   </view>
 </navigator>
 
@@ -28,8 +28,8 @@
 
 <navigator url="/pages/index/橘猫及橘白/橘猫及橘白" >
   <view class="catitem">
-    <image  class = 'avator ' src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/畅蠢_circle.png" mode='aspectFill' ></image>
-    <view class= "cat-name">橘猫和橘白</view>
+    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/小七_circle.png" mode='aspectFill' ></image>
+    <view class= "cat-name">橘猫及橘白</view>
   </view>
 </navigator>
 
@@ -37,7 +37,7 @@
 
 <navigator url="/pages/index/纯色/纯色" >
   <view class="catitem">
-    <image  class = 'avator ' src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/薏米_circle.png" mode='aspectFill' ></image>
+    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/饭团_circle.png" mode='aspectFill' ></image>
     <view class= "cat-name">纯色</view>
   </view>
 </navigator>
@@ -47,7 +47,7 @@
 
 <navigator url="/pages/index/奶牛/奶牛" >
   <view class="catitem">
-    <image  class = 'avator ' src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/英杰_circle.png" mode='aspectFill' ></image>
+    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/英杰_circle.png" mode='aspectFill' ></image>
     <view class= "cat-name">奶牛</view>
   </view>
 </navigator>
@@ -56,7 +56,7 @@
 
 <navigator url="/pages/index/狸花/狸花" >
   <view class="catitem">
-    <image  class = 'avator ' src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/山竹_circle.png" mode='aspectFill' ></image>
+    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/十九_circle.png" mode='aspectFill' ></image>
     <view class= "cat-name">狸花</view>
   </view>
 </navigator>
@@ -99,7 +99,7 @@
   <block wx:for="{{fostered_catlist}}">
   <navigator url="/pages/cats/{{item.name}}/{{item.name}}" >
     <view class="catitem">
-      <image  class = 'avator ' lazy-load src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/{{item.name}}_circle.png" mode='aspectFill' ></image>
+      <image  class = 'avator ' lazy-load src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/{{item.name}}_circle.png" mode='aspectFill' ></image>
       <view class= "cat-name">{{item.name}}</view> 
     </view>
   </navigator>
@@ -115,7 +115,7 @@
     <block wx:for="{{unknown_catlist}}">
   <navigator url="/pages/cats/{{item.name}}/{{item.name}}" >
     <view class="catitem">
-      <image  class = 'avator ' lazy-load src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/{{item.name}}_circle.png" mode='aspectFill' ></image>
+      <image  class = 'avator ' lazy-load src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/{{item.name}}_circle.png" mode='aspectFill' ></image>
       <view class= "cat-name">{{item.name}}</view> 
     </view>
   </navigator>
@@ -131,7 +131,7 @@
     <block wx:for="{{dead_catlist}}">
   <navigator url="/pages/cats/{{item.name}}/{{item.name}}" >
     <view class="catitem">
-      <image  class = 'avator ' lazy-load src="https://pku-lostangel.oss-cn-beijing.aliyuncs.com/{{item.name}}_circle.png" mode='aspectFill' ></image>
+      <image  class = 'avator ' lazy-load src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/{{item.name}}_circle.png" mode='aspectFill' ></image>
       <view class= "cat-name">{{item.name}}</view> 
     </view>
   </navigator>
