--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -37,7 +37,7 @@
 
 <navigator url="/pages/index/纯色/纯色" >
   <view class="catitem">
-    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/饭团_circle.png" mode='aspectFill' ></image>
+    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/大白_circle.png" mode='aspectFill' ></image>
     <view class= "cat-name">纯色</view>
   </view>
 </navigator>
@@ -47,7 +47,7 @@
 
 <navigator url="/pages/index/奶牛/奶牛" >
   <view class="catitem">
-    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/英杰_circle.png" mode='aspectFill' ></image>
+    <image  class = 'avator ' src="https://shtu.oss-cn-shanghai.aliyuncs.com/cats/饭团_circle.png" mode='aspectFill' ></image>
     <view class= "cat-name">奶牛</view>
   </view>
 </navigator>
@@ -73,6 +73,9 @@
 <view class="divLine"></view>
 
 <text> \n </text>
+
+<view class = "body">该小程序仍处于<text class = "bodybold">开发测试中</text>，其内容<text class = "bodybold">可能会出现频繁改变</text>，部分内容<text class = "bodybold">可能存在BUG</text>！
+</view>
 
 <view class = "body">若您在校内偶遇流浪猫，<text class = "bodybold">切记</text>人类的食物<text class = "bodybold">不要</text>喂给流浪猫！
 </view>
